--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#ff008577</color>
-    <color name="colorPrimaryDark">#ff00574b</color>
-    <color name="colorAccent">#ffd81b60</color>
+    <color name="color_primary">#ff008577</color>
+    <color name="color_primary_dark">#ff00574b</color>
+    <color name="color_accent">#ffd81b60</color>
 
 </resources>
